syntax = "proto3";
package proto;

option java_multiple_files = true;
option java_package = "generated";
option java_outer_classname = "UserProto";

service User {
  rpc createUser(UserRequest) returns (APIResponse);
  rpc getUsers(Empty) returns (stream UserResponse) {};
}

message UserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string username = 1;
  string password = 2;
}

message APIResponse {
  int32 responseCode = 1 ;
  string responseMessage = 2;
}

message Empty {

}
